--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -6,5 +6,6 @@
   SMART Online is a SaaS solution consisting of microservices supporting content delivery 
   and audit workflow. It is an integration product, accessed through other TR products, like 
   AdvanceFlow and Onvio Workpapers. Integration is supported through services and UI, which 
-  consists of single page applications (SPAs). <app-second></app-second>
+  consists of single page applications (SPAs). 
+  <app-second></app-second>
   </p>
