--- a/src/app/second/second.component.html
+++ b/src/app/second/second.component.html
@@ -1,3 +1,3 @@
-<p>to the extent possible, SMART Online adheres  
+To the extent possible, SMART Online adheres  
   to architectural guidelines provided by the Tax and Accounting Enterprise Architecture Council. 
-  It's hosted in the TR Data Center, but will likely be hosted in the public cloud in the future</p>
+  It's hosted in the TR Data Center, but will likely be hosted in the public cloud in the future
